--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@livepeer/react": "^4.3.6",
+    "@mocanetwork/airkit": "^1.6.0",
     "@mui/icons-material": "^5.15.18",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
@@ -67,6 +68,7 @@
     "framer-motion": "^12.10.1",
     "got": "^11.8.6",
     "ioredis": "^5.3.2",
+    "jose": "^6.1.1",
     "livepeer": "^3.5.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.469.0",
